Improved AppConfig handling

--- a/App.config
+++ b/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="apikey" value="ENTER A VALID OPENAI API KEY OR TURN TEST MODE TO TRUE" />
-		<add key="templateDirectory" value="@..\..\..\..\..\files\CV_Templates\"  />
-		<add key="outputDirectory" value="@..\..\..\..\..\files\CV\" />
+		<add key="apikey" value="ENTER YOUR APIKEY HERE" />
+		<add key="templateDirectory" value="..\..\..\files\CV_Templates\" />
+		<add key="outputDirectory" value="..\..\..\files\CV\" />
 		<add key="testmode" value="false" />
 		<add key="gptmodel" value="3" />
 	</appSettings>
